--- a/src/main/resources/application-database.yml
+++ b/src/main/resources/application-database.yml
@@ -4,12 +4,11 @@ spring:
     url: r2dbc:postgresql://localhost/postgres
     username: postgres
     password: liquibase
-  datasource:
+  liquibase:
     url: jdbc:postgresql://localhost/postgres
     driverClassName: org.postgresql.Driver
-    username: postgres
+    user: postgres
     password: liquibase
-  liquibase:
     changeLog: "classpath:db/changelog/main-changelog.yml"
     contexts: prod
     dropFirst: false
